--- a/starwars/src/App.css
+++ b/starwars/src/App.css
@@ -1,8 +1,26 @@
 .App {
   text-align: center;
+  max-width: 100%;
+  margin: 0 auto;
+  background-image: url('./sw-bg.jpg');
+  background-size: cover;
 }
 .Header {
   color: #443e3e;
-  text-shadow: 1px 1px 5px #fff;
 }
 /* write your parent styles in here for your App.js */
+
+.segment {
+  max-width: 500px;
+}
+
+.wrap {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: baseline;
+  padding-left: 13%;
+}
+
+.display {
+  width: 350px;
+}
